--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,10 @@
 @import "fonts";
 @import "functions";
+@import "variables";
+@import "~bootstrap/scss/bootstrap";
 @import "landing";
 @import "icomoon";
+
 
 body {
   text-align: right;
